# bevy_make_human

./: .gitattributes  Cargo.toml  README.md  build.rs
.zed/: settings.json
assets/animations/dip/: dip_throw_ball.npy  dip_throw_ball_motion_only.npy
assets/animations/gltf/: Breathing Idle.glb  mixamo_skeleton.glb
assets/animations/mixamo/: Warrior Idle.fbx
assets/arkit/: line_001.json
assets/make_human/clothes/aethelraed_flapper_dress/: aethelraed_flapper_dress.mhclo  aethelraed_flapper_dress.thumb  green.mhmat
assets/make_human/clothes/aethelraed_unraed_cloche_hat/: aethelraed_unraed_cloche_hat.mhclo  aethelraed_unraed_cloche_hat.thumb  green.mhmat
assets/make_human/clothes/callharvey3d_harvey_pskirt01/: callharvey3d_harvey_pskirt01.mhclo  callharvey3d_harvey_pskirt01.thumb  harvey_pskirt01.mhmat
assets/make_human/clothes/callharvey3d_harvey_saddleshoes1/: callharvey3d_harvey_saddleshoes1.mhclo  callharvey3d_harvey_saddleshoes1.thumb  harvey_shoesaddle1.mhmat
assets/make_human/clothes/cortu_cargo_pants/: cargo_pants.mhmat  cortu_cargo_pants.mhclo  cortu_cargo_pants.thumb
assets/make_human/clothes/cortu_floppy_overknee_shoes/: cortu_floppy_overknee_shoes.mhclo  cortu_floppy_overknee_shoes.thumb  floppy_overknee_shoe.mhmat
assets/make_human/clothes/cortu_jeans_shorts/: cortu_jeans_shorts.mhclo  cortu_jeans_shorts.thumb  jean_shorts.mhmat
assets/make_human/clothes/cortu_t-bar/: cortu_t-bar.mhclo  cortu_t-bar.thumb  tbar.mhmat
assets/make_human/clothes/culturalibre_bandana_mask/: bandana_mask.mhmat  culturalibre_bandana_mask.mhclo  culturalibre_bandana_mask.thumb
assets/make_human/clothes/culturalibre_cl_bowler_hat/: cl_bowler_hat.mhmat  culturalibre_cl_bowler_hat.mhclo  culturalibre_cl_bowler_hat.thumb
assets/make_human/clothes/culturalibre_cl_devil_tail/: cl_devil_tail.mhmat  culturalibre_cl_devil_tail.mhclo  culturalibre_cl_devil_tail.thumb
assets/make_human/clothes/culturalibre_cl_don_quixote_hat/: cl_don_quixote_hat.mhmat  culturalibre_cl_don_quixote_hat.mhclo  culturalibre_cl_don_quixote_hat.thumb
assets/make_human/clothes/culturalibre_cl_gun/: culturalibre_cl_gun.mhclo  culturalibre_cl_gun.thumb
assets/make_human/clothes/culturalibre_cl_gun_left_hand/: cl_gun_left_hand.mhmat  culturalibre_cl_gun_left_hand.mhclo  culturalibre_cl_gun_left_hand.thumb
assets/make_human/clothes/culturalibre_dal_moustache/: culturalibre_dal_moustache.mhclo  culturalibre_dal_moustache.thumb  dali_moustache.mhmat
assets/make_human/clothes/culturalibre_doc_ock_glasses/: culturalibre_doc_ock_glasses.mhclo  culturalibre_doc_ock_glasses.thumb  doc_ock_glasses.mhmat
assets/make_human/clothes/culturalibre_faun_beard/: culturalibre_faun_beard.mhclo  culturalibre_faun_beard.thumb  faun_beard.mhmat
assets/make_human/clothes/culturalibre_faun_horns/: culturalibre_faun_horns.mhclo  culturalibre_faun_horns.thumb  faun_horns.mhmat
assets/make_human/clothes/culturalibre_hand_claws/: culturalibre_hand_claws.mhclo  culturalibre_hand_claws.thumb  hand_claws.mhmat
assets/make_human/clothes/culturalibre_hero-heroine_gloves_1/: culturalibre_hero-heroine_gloves_1.mhclo  culturalibre_hero-heroine_gloves_1.thumb  hero-heroine_gloves_1.mhmat
assets/make_human/clothes/culturalibre_hero-heroine_gloves_2/: culturalibre_hero-heroine_gloves_2.mhclo  culturalibre_hero-heroine_gloves_2.thumb  hero-heroine_gloves_2.mhmat
assets/make_human/clothes/culturalibre_hero-heroine_gloves_3/: culturalibre_hero-heroine_gloves_3.mhclo  culturalibre_hero-heroine_gloves_3.thumb  hero-heroine_gloves_3.mhmat
assets/make_human/clothes/culturalibre_hero-heroine_gloves_4/: culturalibre_hero-heroine_gloves_4.mhclo  culturalibre_hero-heroine_gloves_4.thumb
assets/make_human/clothes/culturalibre_hero-heroine_gloves_5/: culturalibre_hero-heroine_gloves_5.mhclo  culturalibre_hero-heroine_gloves_5.thumb  hero-heroine_gloves_5.mhmat
assets/make_human/clothes/culturalibre_hero-heroine_hood_1/: culturalibre_hero-heroine_hood_1.mhclo  culturalibre_hero-heroine_hood_1.thumb  hero-heroine_hood_1.mhmat
assets/make_human/clothes/culturalibre_hero-heroine_hood_2/: culturalibre_hero-heroine_hood_2.mhclo  culturalibre_hero-heroine_hood_2.thumb  hero-heroine_hood_2.mhmat
assets/make_human/clothes/culturalibre_hero_boots_1/: culturalibre_hero_boots_1.mhclo  culturalibre_hero_boots_1.thumb  hero_boots_1.mhmat
assets/make_human/clothes/culturalibre_hero_boots_2/: culturalibre_hero_boots_2.mhclo  culturalibre_hero_boots_2.thumb
assets/make_human/clothes/culturalibre_hero_boots_3/: culturalibre_hero_boots_3.mhclo  culturalibre_hero_boots_3.thumb  hero_boots_3.mhmat
assets/make_human/clothes/culturalibre_hero_boots_4/: culturalibre_hero_boots_4.mhclo  culturalibre_hero_boots_4.thumb  hero_boots_4.mhmat
assets/make_human/clothes/culturalibre_hero_boots_5/: culturalibre_hero_boots_5.mhclo  culturalibre_hero_boots_5.thumb  hero_boots_5.mhmat
assets/make_human/clothes/culturalibre_hero_kalistick/: culturalibre_hero_kalistick.mhclo  culturalibre_hero_kalistick.thumb  hero_kalistick.mhmat
assets/make_human/clothes/culturalibre_hero_kalistick_lefthanded/: culturalibre_hero_kalistick_lefthanded.mhclo  (+1 more)
assets/make_human/mesh_metadata/: basemesh.vertex_groups.json  basemesh_face_to_vertex_table.json  basemesh_vertex_to_face_table.json  hm08.mirror  hm08_config.json  proxy_corrective.json
assets/make_human/targets/: target.json
examples/: animation.rs  arkit.rs  basic.rs  egui.rs  feathers.rs
examples/common/: camera_free.rs  editor.rs  mod.rs
examples/ui/: clothing.rs  collapsible.rs  dropdown.rs  mod.rs  morphs.rs  offset.rs  scroll.rs  text_input.rs
scripts/: assets.sh
src/: assets.rs  components.rs  debug_draw.rs  events.rs  expression.rs  lib.rs  shapes.rs  skeleton.rs  util.rs
src/loaders/: mhclo.rs  mhmat.rs  mod.rs  morph_target.rs  obj_base_mesh.rs  pose.rs  proxy.rs  rig.rs  skin_weights.rs  thumb.rs  vertex_groups.rs
src/ui/: clothing.rs  dropdown.rs  filter_dropdown.rs  mod.rs  morphs.rs  offset.rs  scroll.rs  text_input.rs
tools/: assets.sh  make_meta.sh  mh_to_arkit.py
(+3122 files in other folders)
