[package]
name = "bevy_make_human"
version = "0.1.0"
edition = "2024"

[features]
default = ["feathers", "debug_draw"]
feathers = ["bevy/experimental_bevy_feathers", "bevy_ui_text_input", "cosmic-text", "bevy_enhanced_input"]
debug_draw = ["bevy_mod_billboard", "bevy/default_font"]
raytrace = ["bevy/bevy_solari"]

[dependencies]
bevy = "0.17"
avian3d = "0.4"
bevy-inspector-egui = { version = "0.35" }

# official release does not have progress tracking due to iyes_progress not official updated yet to 0.17
bevy_asset_loader = { git="https://github.com/slyedoc/bevy_asset_loader.git", branch= "with_progress", features = [
    "2d",
    "standard_dynamic_assets",
    "progress_tracking"
] }
# fork updated for bevy 0.17
iyes_progress = { git = "https://github.com/funatsufumiya/iyes_progress.git", branch = "feat/bevy_0.17" }

obj = "0.10.2"
bevy_obj = { version = "0.17", default-features = false, features = ["mesh"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strum = { version = "0.27", features = ["derive"] }
thiserror = "1.0"

# Optional debug_draw
bevy_mod_billboard = { git = "https://github.com/kisya-games/bevy_mod_billboard.git", branch = "bevy-0.17", optional = true }

# Optional ui
bevy_ui_text_input = { git = "https://github.com/slyedoc/bevy_ui_text_input", branch = "export-text-input-pipeline", optional = true }
cosmic-text = { version = "0.14", optional = true }
bevy_enhanced_input = { version = "0.19", optional = true }

[[example]]
name = "basic"
required-features = []

[[example]]
name = "feathers"
required-features = ["feathers", "debug_draw"]

[[example]]
name = "arkit"
required-features = []

[dev-dependencies]
bevy = { version = "0.17", features = [
    "bevy_dev_tools", # fps overlay
    "bevy_ui_debug", # ui debug
    "wav", # audio support
] }
avian3d = { version = "0.4", features = [
    "debug-plugin",
    "diagnostic_ui",
] }
bevy_enhanced_input = "0.19"
bevy-inspector-egui = { version = "0.35" }
bevy_egui = "0.38"
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator", branch = "main" }
bevy_mod_skinned_aabb = "0.3"
#rand = "0.9"

[build-dependencies]
serde_json = "1.0"

# optimization for dependencies in dev
[profile.dev.package."*"]
opt-level = 3
