[package]
name = "bevy_make_human"
description = "MakeHuman integration for Bevy"
repository = "https://github.com/slyedoc/bevy_make_human"
keywords = ["bevy", "makehuman", "gamedev"]
categories = ["game-development"]
authors = ["Patrick Towles <james.towles+bevy_make_human@gmail.com>"]
version = "0.1.1"
edition = "2024"

[features]
default = ["glossy_eyes", "debug_draw", "arkit"]
glossy_eyes = ["bevy/pbr_multi_layer_material_textures"]
arkit = []
debug_draw = ["bevy_mod_billboard", "bevy/default_font"]
raytrace = ["bevy/bevy_solari"]

[dependencies]
bevy = { version = "0.18.0-rc", features = [
    "png", # png texture support
    "jpeg", # jpg texture support
] }
avian3d = { git = "https://github.com/avianphysics/avian", branch = "bevy-0.18" } #rc

bevy-inspector-egui = { git = "https://github.com/luggage66/bevy-inspector-egui", branch = "bevy-0.18" } #rc

# official release does not have progress tracking due to iyes_progress not official updated yet to 0.17
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch= "bevy_main", features = [
    "2d",
    "standard_dynamic_assets",
    # "progress_tracking"
] } 
bevy_blend_shapes = { git = "https://github.com/slyedoc/bevy_blend_shapes.git" }

# fork updated for bevy 0.17
#iyes_progress = { git = "https://github.com/funatsufumiya/iyes_progress.git", branch = "feat/bevy_0.17" }

obj = "0.10.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strum = { version = "0.27", features = ["derive"] }
thiserror = "1.0"

# Optional debug_draw
bevy_mod_billboard = { git = "https://github.com/slyedoc/bevy_mod_billboard.git", branch = "bevy-0.18", optional = true }

[[example]]
name = "basic"
required-features = []

[[example]]
name = "feathers"
required-features = []

[[example]]
name = "arkit"
required-features = []

[dev-dependencies]
bevy = { version = "0.18.0-rc", features = [
    "bevy_dev_tools", # fps overlay
    "bevy_ui_debug", # ui debug
    "wav", # audio support
    "experimental_bevy_feathers",
] }
avian3d = { git = "https://github.com/avianphysics/avian", branch = "bevy-0.18", features = [
    "debug-plugin",
    "diagnostic_ui",
] }
bevy_mod_skinned_aabb = { git = "https://github.com/greeble-dev/bevy_mod_skinned_aabb", branch = "bevy-0.18" } 
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator", branch = "bevy18" }
bevy-inspector-egui = { git = "https://github.com/luggage66/bevy-inspector-egui", branch = "bevy-0.18" }
bevy_enhanced_input = { git = "https://github.com/simgine/bevy_enhanced_input", branch = "bevy-0.18"}
bevy_egui = { git = "https://github.com/ptsd/bevy_egui", branch = "bevy-0.18" }

# ui
bevy_ui_text_input = { git = "https://github.com/slyedoc/bevy_ui_text_input", branch = "bevy-0.18" }
cosmic-text = { version = "0.16" }


[build-dependencies]
serde_json = "1.0"

# optimization for dependencies in dev
[profile.dev.package."*"]
opt-level = 3
